--- a/templates/default/nginx.conf.erb
+++ b/templates/default/nginx.conf.erb
@@ -75,8 +75,11 @@ http {
 
   <% end -%>
 
-  fastcgi_cache_path /tmp/nginx/cache levels=1:2 keys_zone=NGINX_CACHE:100m inactive=60m;
-  fastcgi_cache_key "$scheme$request_method$host$request_uri";
+  <% if node['nginx']['cache']['enabled'] %>
+  <% FileUtils.mkdir_p node['nginx']['cache']['path'] %>
+  fastcgi_cache_path <%= node['nginx']['cache']['path'] %> levels=1:2 keys_zone=<%= node['nginx']['cache']['keys_zone_name'] %>:<%= node['nginx']['cache']['keys_zone_size'] %>m inactive=60m;
+  fastcgi_cache_key <%= node['nginx']['cache']['key_scheme'] %>;
+  <% end %>
 
   include <%= node['nginx']['dir'] %>/conf.d/*.conf;
   include <%= node['nginx']['dir'] %>/sites-enabled/*;
