--- a/templates/default/nginx.conf.erb
+++ b/templates/default/nginx.conf.erb
@@ -74,10 +74,10 @@ http {
   limit_req_zone $binary_remote_addr zone=<%= node['nginx']['rate_limiting_zone_name'] %>:<%= node['nginx']['rate_limiting_backoff'] %> rate=<%= node['nginx']['rate_limit'] %>;
 
   <% end -%>
-  <% if node['nginx']['cache']['enabled'] %>
-  <% FileUtils.mkdir_p node['nginx']['cache']['path'] %>
-  fastcgi_cache_path <%= node['nginx']['cache']['path'] %> levels=1:2 keys_zone=<%= node['nginx']['cache']['keys_zone_name'] %>:<%= node['nginx']['cache']['keys_zone_size'] %>m inactive=60m;
-  fastcgi_cache_key <%= node['nginx']['cache']['key_scheme'] %>;
+  <% if node['nginx']['fastcgi_cache']['enabled'] %>
+  <% FileUtils.mkdir_p node['nginx']['fastcgi_cache']['path'] %>
+  fastcgi_cache_path <%= node['nginx']['fastcgi_cache']['path'] %> levels=1:2 keys_zone=<%= node['nginx']['fastcgi_cache']['keys_zone_name'] %>:<%= node['nginx']['fastcgi_cache']['keys_zone_size'] %>m inactive=60m;
+  fastcgi_cache_key <%= node['nginx']['fastcgi_cache']['key_scheme'] %>;
 
   <% end %>
   include <%= node['nginx']['dir'] %>/conf.d/*.conf;
