CGIV-7021: updated nginx.conf template to force connection via TLS

--- a/templates/default/nginx.conf.erb
+++ b/templates/default/nginx.conf.erb
@@ -21,6 +21,8 @@ events {
 }
 
 http {
+  ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+
   <% if node.recipe?('nginx::naxsi_module') %>
   include       <%= node['nginx']['dir'] %>/naxsi_core.rules;
   <% end %>
